--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "teste_tecnico",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --watchAll",
+    "test1": "echo \"Error: no test specified\" && exit 1",
     "debug": "nodemon index.js",
     "create": "cd src && npx sequelize db:create && npx sequelize db:migrate $",
     "drop": "cd src && npx sequelize db:drop $",
@@ -23,10 +24,14 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "jest": "^27.0.6",
     "joi": "^17.4.0",
     "mysql2": "^2.2.5",
     "nodemon": "^2.0.10",
     "sequelize": "^6.6.5",
-    "sequelize-cli": "^6.2.0"
+    "sequelize-cli": "^6.2.0",
+    "shell": "^0.8.4",
+    "shelljs": "^0.8.4",
+    "supertest": "^6.1.3"
   }
 }
